[package]
name = "xcm-simulator"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
paste = "1.0.7"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25"}
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25"}
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25"}
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25"}
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25"}
